--- a/static/global.css
+++ b/static/global.css
@@ -1,10 +1,19 @@
+:root {
+    --bg-color-1: #222222;
+    --bg-color-2: #282828;
+    --fg-color-1: white }
+
+*, *::before, *::after {
+    box-sizing: border-box; }
+
 body {
 	margin: 0;
+    font-size: 0.875rem;
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background-color: var(--bg-color-1);
 	font-size: 14px;
 	line-height: 1.5;
-	color: #333;
-}
+	color: var(--fg-color-1) }
 
 h1, h2, h3, h4, h5, h6 {
 	margin: 0 0 0.5em 0;
