--- a/static/global.css
+++ b/static/global.css
@@ -38,6 +38,10 @@ code {
 	border-radius: 2px;
 }
 
+.wrapper {
+    max-width: 65rem 
+}
+
 @media (min-width: 400px) {
 	body {
 		font-size: 16px;
