--- a/static/global.css
+++ b/static/global.css
@@ -1,6 +1,7 @@
 :root {
     --bg-color-1: #222222;
     --bg-color-2: #282828;
+    --accent-color-1: #c7392bff;
     --fg-color-1: white }
 
 *, *::before, *::after {
@@ -28,6 +29,9 @@ h1 {
 a {
 	color: inherit;
 }
+p {
+    font-weight: 300;
+}
 
 code {
 	font-family: menlo, inconsolata, monospace;
@@ -39,7 +43,8 @@ code {
 }
 
 .wrapper {
-    max-width: 65rem 
+    max-width: 65rem;
+    margin: 0 auto;
 }
 
 @media (min-width: 400px) {
