--- a/src/lib/footer/style.scss
+++ b/src/lib/footer/style.scss
@@ -35,6 +35,7 @@ footer .inner > :last-child {
 	padding-top: 1rem;
 	grid-column: 1 / -1;
 	justify-self: center;
+	opacity: .5;
 	// background-color:  red;;
 }
 
