--- a/src/lib/Navbar/styles.scss
+++ b/src/lib/Navbar/styles.scss
@@ -3,7 +3,10 @@
 .navbar {
 	position: sticky;
 	top: 0;
-	background-image: filter(10px);
+    
+ //    background-color: rgba(255,255,255, 0.02);
+	// backdrop-filter: blur(3px);
+	// backdrop-filter: blur(10px);
 
 }
 
