--- a/src/lib/footer/style.scss
+++ b/src/lib/footer/style.scss
@@ -1,6 +1,8 @@
 
 footer {
 	background-color: #101010;;
+    padding-bottom: 0px;
+
 }
 
 .inner {
@@ -8,9 +10,9 @@ footer {
 	display: grid;
 	margin: 0 auto;
 	max-width: 1024px;;
-	padding: 40px;
 	color: rgba(255, 255, 255, .75);
 		grid-template-columns: 1fr;
+        
 }
 
 p {
@@ -28,7 +30,6 @@ p {
 
 footer .inner div:nth-child(1) {
 	padding-right: 4rem;
-	// background-color: red;
 }
 
 footer .inner > :last-child {
@@ -36,7 +37,8 @@ footer .inner > :last-child {
 	grid-column: 1 / -1;
 	justify-self: center;
 	opacity: .5;
-	// background-color:  red;;
+	padding-top: 50px;
+    
 }
 
 @media (min-width: 480px) {
